FIX: styling issues on mobile viewport

--- a/src/components/ReviewGrid/ReviewGrid.module.css
+++ b/src/components/ReviewGrid/ReviewGrid.module.css
@@ -7,3 +7,9 @@ ul {
   padding: 1rem 3rem;
   justify-items: center;
 }
+
+@media screen and (max-width: 480px) {
+  ul {
+    padding: 1rem 0;
+  }
+}
